--- a/FirebaseChat/app/src/main/res/layout/sendmessage.xml
+++ b/FirebaseChat/app/src/main/res/layout/sendmessage.xml
@@ -1,21 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:layout_height="wrap_content"
+    android:gravity="bottom"
+    android:orientation="vertical"
     android:weightSum="2">
 
-
-    <EditText
-        android:id="@+id/message"
-        android:layout_width="0dp"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1.5" />
+        android:background="@drawable/back_rectangle"
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/send"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight=".5"
-        android:text="Send" />
+        <EditText
+            android:id="@+id/message"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.5"
+            android:background="@null" />
+
+        <Button
+            android:id="@+id/send"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight=".5"
+            android:text="Send" />
+    </LinearLayout>
 </LinearLayout>
